Added phone validation in add form

--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -153,8 +153,8 @@
 																<div class="overflow">
 																	<div class="col-md-6 first">
 																		<div class="form-group">
-																			<label for="">Phone Number</label>
-																			<input type="text" name="user_phone_no" id="user_phone_no" ng-model="userData.user_phone_no" class="form-control mb-10" placeholder="" >
+																			<label for="user_phone_no">Phone Number</label>
+																			<input type="text" name="user_phone_no" id="user_phone_no" ng-model="userData.user_phone_no" class="form-control mb-10" placeholder="" rangelength>
 																		</div>
 																	</div>
 																	<div class="col-md-6 last">
