--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -211,7 +211,7 @@
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<!-- <a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.dashboard">View</a> -->
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details({facility_id:  {{facility.facility_id }}})">View</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details({facility_id:  facility.facility_id })">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details({facility_id:  {{facility.facility_id }}})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
