--- a/views/tmpl/admin/settings.html
+++ b/views/tmpl/admin/settings.html
@@ -49,24 +49,20 @@
 														<div class="form-group row">
 															<div class="col-sm-3">						
 																<label for="address1">Relay 1 strike time</label>
-																<input type="text" class="form-control" id="address1" value="1000">
+																<input type="text" class="form-control" id="address1" ng-model="relay[0].relay" value="1000">
 															</div>
 															<div class="col-sm-3">
 																<label for="">Door</label><br/>
-																<select chosen="{width: '100%'}">
-																	<option value="">Main Gate Front</option>
-																	<option value="">Main Gate Back</option>
-																	<option value="">Pedestrian Gate</option>
-																	<option value="">Parking Gate</option>
-																	<option value="">Pool Gate</option>
+																<select chosen="{width: '100%'}" ng-model="relay[0].door_id" ng-options="x.door_id as x.door_name for x in doorList">
+																	
 																</select>
 															</div>
 															<div class="col-sm-6" ng-controller="ActivebtnCtrl">
 																<div class="col-sm-5">
 																	<label for="">Door Ajar</label><br/>
 																	<div class="btn-group btnrounded">
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																		<label class="btn btn-default" ng-model="relay[0].status" uib-btn-radio="'Active'">Active</label>
+																		<label class="btn btn-default" ng-model="relay[0].status" uib-btn-radio="'Inactive'">Inactive</label>
 																	</div>
 																</div>
 																<div class="col-sm-7" ng-hide="radioModel=='Inactive'">
@@ -84,24 +80,20 @@
 														<div class="form-group row">
 															<div class="col-sm-3">						
 																<label for="address1">Relay 2 strike time</label>
-																<input type="text" class="form-control" id="address1" value="1000">
+																<input type="text" class="form-control" id="address1" ng-model="relay[1].relay" value="1000">
 															</div>
 															<div class="col-sm-3">
 																<label for="">Door</label><br/>
-																<select chosen="{width: '100%'}">
-																	<option value="">Main Gate Front</option>
-																	<option value="">Main Gate Back</option>
-																	<option value="">Pedestrian Gate</option>
-																	<option value="">Parking Gate</option>
-																	<option value="">Pool Gate</option>
+																<select chosen="{width: '100%'}" ng-model="relay[1].door_id" ng-options="x.door_id as x.door_name for x in doorList">
+																	
 																</select>
 															</div>
 															<div class="col-sm-6" ng-controller="ActivebtnCtrl">
 																<div class="col-sm-5">
 																	<label for="">Door Ajar</label><br/>
 																	<div class="btn-group btnrounded">
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																		<label class="btn btn-default" ng-model="relay[1].status" uib-btn-radio="'Active'">Active</label>
+																		<label class="btn btn-default" ng-model="relay[1].status" uib-btn-radio="'Inactive'">Inactive</label>
 																	</div>
 																</div>
 																<div class="col-sm-7" ng-hide="radioModel=='Inactive'">
@@ -119,24 +111,20 @@
 														<div class="form-group row">
 															<div class="col-sm-3">						
 																<label for="address1">Relay 3 strike time</label>
-																<input type="text" class="form-control" id="address1" value="1000">
+																<input type="text" class="form-control" id="address1" ng-model="relay[2].relay" value="1000">
 															</div>
 															<div class="col-sm-3">
 																<label for="">Door</label><br/>
-																<select chosen="{width: '100%'}">
-																	<option value="">Main Gate Front</option>
-																	<option value="">Main Gate Back</option>
-																	<option value="">Pedestrian Gate</option>
-																	<option value="">Parking Gate</option>
-																	<option value="">Pool Gate</option>
+																<select chosen="{width: '100%'}" ng-model="relay[2].door_id" ng-options="x.door_id as x.door_name for x in doorList">
+																	
 																</select>
 															</div>
 															<div class="col-sm-6" ng-controller="ActivebtnCtrl">
 																<div class="col-sm-5">
 																	<label for="">Door Ajar</label><br/>
 																	<div class="btn-group btnrounded">
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																		<label class="btn btn-default" ng-model="relay[2].status" uib-btn-radio="'Active'">Active</label>
+																		<label class="btn btn-default" ng-model="relay[2].status" uib-btn-radio="'Inactive'">Inactive</label>
 																	</div>
 																</div>
 																<div class="col-sm-7" ng-hide="radioModel=='Inactive'">
@@ -154,27 +142,23 @@
 														<div class="form-group row">
 															<div class="col-sm-3">						
 																<label for="address1">Relay 4 strike time</label>
-																<input type="text" class="form-control" id="address1" value="1000">
+																<input type="text" class="form-control" id="address1" ng-model="relay[3].relay" value="1000">
 															</div>
 															<div class="col-sm-3">
 																<label for="">Door</label><br/>
-																<select chosen="{width: '100%'}">
-																	<option value="">Main Gate Front</option>
-																	<option value="">Main Gate Back</option>
-																	<option value="">Pedestrian Gate</option>
-																	<option value="">Parking Gate</option>
-																	<option value="">Pool Gate</option>
+																<select chosen="{width: '100%'}" ng-model="relay[3].door_id" ng-options="x.door_id as x.door_name for x in doorList">
+																	
 																</select>
 															</div>
 															<div class="col-sm-6" ng-controller="ActivebtnCtrl">
 																<div class="col-sm-5">
 																	<label for="">Door Ajar</label><br/>
 																	<div class="btn-group btnrounded">
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																		<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																		<label class="btn btn-default" ng-model="relay[3].status" uib-btn-radio="'Active'">Active</label>
+																		<label class="btn btn-default" ng-model="relay[3].status" uib-btn-radio="'Inactive'">Inactive</label>
 																	</div>
 																</div>
-																<div class="col-sm-7" ng-hide="radioModel=='Inactive'">
+																<div class="col-sm-7" ng-hide="relay[3].status=='Inactive'">
 																	<label for="">&nbsp;</label><br/>
 																	<select chosen="{width: '100%'}">
 																		<option value="">Sound alarm using Beeper</option>
@@ -188,7 +172,7 @@
 														</div>
 														<div class="row">
 															<div class="form-group col-md-12 legend">			
-																<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
+																<button ng-click="submitRelayDoor(relay)" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
 																<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
 															</div>
 														</div>
