--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -516,8 +516,8 @@
 												<p>{{ user.user_phone_no }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.user.user-profile({user_id:user.user_id})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.user.user-profile({user_id:user.user_id})">Edit</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.user.user-profile({user_id:user.user_id, type:'view'})">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.user.user-profile({user_id:user.user_id, type:'edit'})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event,user.user_id)">Delete</a>
 											</div>
 										</md-card>										
