--- a/views/tmpl/admin/device/device-details.html
+++ b/views/tmpl/admin/device/device-details.html
@@ -235,7 +235,7 @@
 																			<div class="col-md-6 last">
 																				<div class="form-group">
 																					<label for="">Technician</label><br/>
-																					<select class="form-control" name="technician_id" ng-model="editDevice.technician_id" required>
+																					<!-- <select class="form-control" name="technician_id" ng-model="editDevice.technician_id" required>
 																						<option value=''>Select</option>
 																						<option value=1>Arnold</option>
 																						<option value=2>Peter</option>
@@ -244,6 +244,9 @@
 																						<option value=5>Paul</option>
 																						<option value=6>Vin</option>
 																						<option value=7>Dwayne</option>
+																					</select> -->
+																					<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="editDevice.technician_id" required>
+																						<option value="">Select</option>
 																					</select>
 																					<!-- <small class="pull-right" style="margin-bottom: -5px;"><a ng-click="cancel()" ui-sref="app.admin.support.technician">Add Technician</a></small> -->
 																				</div>
@@ -256,17 +259,9 @@
 																				<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
 																			</div>
 																			<div class="slavevalues" ng-hide="editDevice.device_type=='master'">
-																				<select class="form-control mb-10" name="">
-																					<option value=''>Select</option>
-																					<option value=1>Reception Room</option>
-																					<option value=2>Conference Room</option>
-																					<option value=3>Server Room</option>
-																					<option value=4>Meeting Room</option>
-																					<option value=5>Development Room</option>
-																					<option value=6>Boardroom</option>
-																					<option value=7>Managers Room</option>
-																					<option value=8>Director Room</option>
-																					<option value=9>Inventory Room</option>
+																				
+																				<select class="form-control mb-10" ng-options="item.device_id as item.device_name for item in deviceData track by item.device_id" ng-model="editDevice.device_master_id">
+																					<option value="">Select Primary Device</option>
 																				</select>
 																			</div>
 																		</div>
@@ -778,34 +773,12 @@
 														<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'" style="pointer-events: none;">Dependent</label>
 													</div>
 													<div class="slavevalues" ng-hide="editDevice.device_type=='master'">
-														<select class="form-control mb-10">
+														<select class="form-control mb-10" ng-options="item.device_id as item.device_name for item in deviceData track by item.device_id" ng-model="editDevice.device_master_id">
 															<option>Select Primary Device</option>
-															<option value=1>Reception Room</option>
-															<option value=2>Conference Room</option>
-															<option value=3>Server Room</option>
-															<option value=4>Meeting Room</option>
-															<option value=5>Development Room</option>
-															<option value=6>Boardroom</option>
-															<option value=7>Managers Room</option>
-															<option value=8>Director Room</option>
-															<option value=9>Inventory Room</option>
 														</select>
 													</div>
 												</div>
-												<!--div class="form-group col-sm-6">
-													<label for="">Doors</label><br/>
-													<select multiple chosen="{width: '100%'}">
-														<option selected>Main Gate Front</option>
-														<option>Main Gate Back</option>
-														<option>Exit Gate Front</option>
-														<option>Exit Gate Back</option>
-														<option>Parking Entry Gate</option>
-														<option>Parking Exit Gate</option>
-														<option>Pool Gate</option>
-														<option>Gym Gate</option>
-													</select>
-													<small class="pull-right"><a ui-sref="app.admin.door.doors">Add Door</a></small>
-												</div-->
+												
 											</div>		
 										</div>
 										<div class="row">
