--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -175,7 +175,7 @@
 																	<div class="col-md-6 last">
 																		<div class="form-group">
 																			<label for="">Confirm Password</label>
-																			<input type="password" name="" id="" ng-model="userData.cpassword" class="form-control mb-10" placeholder="">
+																			<input type="password" name="cpassword" id="" ng-model="userData.cpassword" class="form-control mb-10" placeholder="" required>
 																		</div>
 																	</div>
 																</div>
