--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -25,7 +25,7 @@
 								<i class="fa fa-fax fa-5x"></i>
 							</div>
 							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">22</p>
+								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.device}}</p>
 								<span class="text-lg">Devices</span>
 							</div>
 						</div>
@@ -51,7 +51,7 @@
 								<i class="fa fa-users fa-5x"></i>
 							</div>
 							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">95</p>
+								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
 								<span class="text-lg">Users</span>
 							</div>
 						</div>
@@ -77,7 +77,7 @@
 								<i class="fa fa-pause fa-5x"></i>
 							</div>
 							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">35</p>
+								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
 								<span class="text-lg">Doors</span>
 							</div>
 						</div>
