--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -25,7 +25,7 @@
 								<i class="fa fa-fax fa-5x"></i>
 							</div>
 							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.device}}</p>
+								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device + dashboardData.dependent_device}}</p>
 								<span class="text-lg">Devices</span>
 							</div>
 						</div>
