--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -29,7 +29,7 @@
 									<i class="fa fa-fax fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.device}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
 									<span class="text-lg">Primary Devices</span>
 								</div>
 							</div>
@@ -47,7 +47,7 @@
 									<i class="fa fa-mobile fa-5x"></i>
 								</div>
 								<div class="col-xs-8">
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.dependent_device}}</p>
 									<span class="text-lg">Dependent Devices</span>
 								</div>
 							</div>
