--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -1,105 +1,113 @@
 <div class="page page-dashboard">
 	<div class="pagecontent">
-		<div class="row">
-		
+		<div class="row">		
 			<div class="card-container col-lg-6 col-sm-6 col-sm-12">
 				<div class="card">
-					<div class="bg-dashboard">
+					<div class="bg-dashboard dashboardbg">
 						<div class="bg-transparent">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font h3link"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></h3>
-									<p>{{page.subtitle}}</p>									
+									<!--h3 class="custom-font h3link"><a ui-sref="app.admin.facility.facility">Facilities</a></h3-->
+									<p class="dashtext">{{page.subtitle}}</p>									
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="front bg-blue">						
 						<div class="row">
-							<div class="col-xs-5 ta-r">
-								<i class="fa fa-fax fa-5x"></i>
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
+								</div>
 							</div>
-							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">22</p>
-								<span class="text-lg">Devices</span>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="back bg-blue">
 						<div class="row">             
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.device.devices"><i class="fa fa-fax fa-2x"></i> Primary</a>
+									<a ui-sref="app.admin.device.devices"><img src="images/device-icon.png" alt=""><br/>Primary</a>
 							</div>
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.device.dependent-devices"><i class="fa fa-mobile fa-2x"></i> Dependent</a>
+									<a ui-sref="app.admin.device.dependent-devices"><img src="images/dependent-device-icon.png" alt=""><br/>Dependent</a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="front bg-lightred">						
 						<div class="row">
-							<div class="col-xs-5 ta-r">
-								<i class="fa fa-users fa-5x"></i>
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
+								</div>
 							</div>
-							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">95</p>
-								<span class="text-lg">Users</span>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>	
 							</div>
 						</div>
 					</div>
 					<div class="back bg-lightred">
 						<div class="row">             
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.user.users"><i class="fa fa-user fa-2x"></i> Users</a>
+									<a ui-sref="app.admin.user.users"><img src="images/users-icon.png" alt=""><br/>Users</a>
 							</div>
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.user.user-groups"><i class="fa fa-users fa-2x"></i> User Groups</a>
+									<a ui-sref="app.admin.user.user-groups"><img src="images/user-groups-icon.png" alt=""><br/>User Groups</a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="front bg-slategray lt">						
 						<div class="row">
-							<div class="col-xs-5 ta-r">
-								<i class="fa fa-pause fa-5x"></i>
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
+								</div>
 							</div>
-							<div class="col-xs-7">								
+							<div class="col-xs-6">	
+							<div class="itxt">							
 								<p class="text-elg text-strong mt-5 mb-5">35</p>
 								<span class="text-lg">Doors</span>
+							</div>	
 							</div>
 						</div>
 					</div>
 					<div class="back bg-slategray">
 						<div class="row">         
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.door.doors"><i class="fa fa-pause fa-2x"></i> Doors</a>
+									<a ui-sref="app.admin.door.doors"><img src="images/doors-icon.png" alt=""><br/>Doors</a>
 							</div>
 							<div class="col-xs-6">
-								<a ui-sref="app.admin.door.door-groups"><i class="fa fa-pause fa-2x"></i> Door Groups</a>
+									<a ui-sref="app.admin.door.door-groups"><img src="images/door-groups-icon.png" alt=""><br/>Door Groups</a>	
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
+				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.camera.camera-dvr">
 						<div class="tile-widget bg-greensea text-center p-20">
-							<i class="fa fa-video-camera fa-3x"></i> 
+							<img src="images/camera-icon.png" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
@@ -113,16 +121,14 @@
 						</ul>
 					</div>
 				</section>
-			</div>
-			
-		</div>
-		
+			</div>			
+		</div>		
 		<div class="row">
-			<div class="card-container col-lg-4 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
+			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.permissions.roles">
-						<div class="tile-widget bg-cyan text-center p-30">
-							<i class="fa fa-key fa-3x"></i>
+						<div class="tile-widget bg-cyan text-center p-30 brt5">
+							<img src="images/key-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
@@ -142,33 +148,12 @@
 						</ul>
 					</div>
 				</section>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.support.technician">
-						<div class="tile-widget bg-dutch text-center p-30">
-							<i class="fa fa-wrench fa-3x"></i>
-						</div>
-					</a>
-					<div class="text-center overflow">
-						<ul class="list-inline tbox mt-10">
-							<li class="tcol">
-								<a ui-sref="app.admin.support.technician">
-									<h3>Technicians</h3>
-									<span class="text-muted">Customer support Elika</span>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</div>
-			
-			<div class="card-container col-lg-5 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.schedule.schedules">
-						<div class="tile-widget bg-drank text-center p-30">
-							<i class="fa fa-calendar fa-3x"></i>
+			</div>			
+			<div class="card-container col-lg-4 col-sm-6 col-sm-12">
+				<section class="tile tile-simple hovershadow border5">
+					<a ui-sref="app.admin.schedule.schedule-groups">
+						<div class="tile-widget bg-drank text-center p-30 brt5">
+							<img src="images/schedule-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
@@ -188,81 +173,39 @@
 						</ul>
 					</div>
 				</section>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.help.message-notification">
-						<div class="tile-widget bg-warning text-center p-30">
-							<i class="fa fa-bullhorn fa-3x"></i>
+				<section class="tile tile-simple hovershadow border5">
+					<a ui-sref="app.admin.help.history-and-reports">
+						<div class="tile-widget bg-lightred text-center p-30 brt5">
+							<img src="images/history-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
 						<ul class="list-inline tbox mt-10">
 							<li class="tcol">
-								<a ui-sref="app.admin.help.message-notification">
-									<h3>Messages &amp; Notifications</h3>
-									<span class="text-muted">Meet with next door</span>
+								<a ui-sref="app.admin.help.history-and-reports">
+									<h3>History and Reports</h3>
+									<span class="text-muted">Touch with all reports</span>
 								</a>
 							</li>
 						</ul>
 					</div>
 				</section>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.help.diagnostics-help">
-						<div class="tile-widget bg-slategray text-center p-30">
-							<i class="fa fa-user-md fa-3x"></i>
+			</div>			
+			<div class="card-container col-lg-2 col-sm-6 col-sm-12">
+				<section class="tile tile-simple hovershadow border5">
+					<a ui-sref="app.admin.support.technician">
+						<div class="tile-widget bg-dutch text-center p-30 brt5">
+							<img src="images/technician-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
 						<ul class="list-inline tbox mt-10">
 							<li class="tcol">
-								<a ui-sref="app.admin.help.diagnostics-help">
-									<h3>Diagnostics and Helps</h3>
-									<span class="text-muted">Filter and solve your problem</span>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.help.history-events">
-						<div class="tile-widget bg-lightred text-center p-30">
-							<i class="fa fa-history fa-3x"></i>
-						</div>
-					</a>
-					<div class="text-center overflow">
-						<ul class="list-inline tbox mt-10">
-							<li class="tcol">
-								<a ui-sref="app.admin.help.history-events">
-									<h3>History and Events</h3>
-									<span class="text-muted">Get in touch with all steps</span>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<section class="tile tile-simple hovershadow">
-					<a ui-sref="app.admin.settings">
-						<div class="tile-widget bg-blue text-center p-30">
-							<i class="fa fa-cog fa-3x"></i>
-						</div>
-					</a>
-					<div class="text-center overflow">
-						<ul class="list-inline tbox mt-10">
-							<li class="tcol">
-								<a ui-sref="app.admin.settings">
-									<h3>Settings</h3>
-									<span class="text-muted">Modify web/app features and behaviours</span>
+								<a ui-sref="app.admin.support.technician">
+									<h3>Technicians</h3>
+									<span class="text-muted">Customer support Elika</span>
 								</a>
 							</li>
 						</ul>
