--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -8,7 +8,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="bg-dashboard pdevicebg">
-						<div class="bg-transparent">
+						<div class="bg-transparent usersbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -25,12 +25,16 @@
 					<a ui-sref="app.admin.device.devices">
 						<div class="noback bg-blue">						
 							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/device-icon.png" alt="">
+									</div>
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
-									<span class="text-lg">Primary Devices</span>
+								<div class="col-xs-6">	
+									<div class="itxt">							
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
+										<span class="text-lg">Devices</span>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -40,15 +44,19 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices" href="#/app/admin/device/dependent-devices">
-						<div class="noback bg-greensea">
+					<a ui-sref="app.admin.door.doors">
+						<div class="noback bg-slategray lt">
 							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/doors-icon.png" alt="">
+									</div>
 								</div>
-								<div class="col-xs-8">
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.dependent_device}}</p>
-									<span class="text-lg">Dependent Devices</span>
+								<div class="col-xs-6">
+									<div class="itxt">
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+										<span class="text-lg">Doors</span>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -61,12 +69,16 @@
 					<a ui-sref="app.admin.user.users">
 						<div class="noback bg-lightred">						
 							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/users-icon.png" alt="">
+									</div>
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
-									<span class="text-lg">Users</span>
+								<div class="col-xs-6">
+									<div class="itxt">								
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+										<span class="text-lg">Users</span>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -457,7 +469,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -471,11 +483,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" ng-model="searchText" ng-keyup="searchFunction($event)" placeholder="Search by text....">
-									<button class="btn btn-default" type="button" ng-click="searchFunction()">Search</button>
+								<div class="col-md-6">
+									<div class="row">
+										<div class="col-md-9 search">
+											<input type="text" class="form-control" ng-model="searchText" ng-keyup="searchFunction($event)" placeholder="Search by text....">
+											<button class="btn btn-default" type="button" ng-click="searchFunction()">Search</button>
+										</div>
+										<div class="col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
